--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -77,6 +77,9 @@
                                 <li>
                                     <a href="#triones-学校学的是淘汰品">学校学的是淘汰品</a>
                                 </li>
+                                <li>
+                                    <a href="#triones-振动治好不育">振动治好不育</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
@@ -183,6 +186,8 @@
                 alt="狗屁不通的数学证明" />
             <img id="triones-学校学的是淘汰品" class="image mdui-center" src="https://s1.ax1x.com/2023/05/18/p9fdGNR.png"
                 alt="学校学的是淘汰品" />
+            <img id="triones-振动治好不育" class="image mdui-center" src="https://s1.ax1x.com/2023/07/20/pCH9rPP.png"
+                alt="振动治好不育" />
         </div>
 
         <div class="chapter">
