--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -12,219 +12,18 @@
 <body>
 
     <div class="mdui-container mdui-text-color-black">
-
-        <nav class="toc">
+        <nav>
             <ul>
                 <li id="idiots">
                     <a href="#idiots">奇人语录</a>
-                    <ul>
-                        <li>
-                            <a href="#timestar">时光星球</a>
-                            <ul>
-                                <li>
-                                    <a href="#timestar-时光帝国">时光帝国</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-三条边的四边形">三条边的四边形</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-追梦人">追梦人</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-人像识别">人像识别</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-时光奇论">时光奇论</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-时光奇论2">时光奇论2</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-时说新语">时说新语</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#triones">北斗星</a>
-                            <ul>
-                                <li>
-                                    <a href="#triones-胡说八道">胡说八道</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-指点江山">指点江山</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-勾罕见">勾罕见</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-lua取代java">lua取代java</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-java退出舞台">java退出舞台</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-胡言乱语">胡言乱语</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-安卓apk转苹果apk">安卓apk转苹果apk</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-这就是未来，听北斗星说">这就是未来，听北斗星说</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-狗屁不通的数学证明">狗屁不通的数学证明</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-学校学的是淘汰品">学校学的是淘汰品</a>
-                                </li>
-                                <li>
-                                    <a href="#triones-振动治好不育">振动治好不育</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#quzefei">曲泽飞</a>
-                            <ul>
-                                <li>
-                                    <a href="#quzefei-心系苍生">心系苍生</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#yijianpa">一键爬</a>
-                            <ul>
-                                <li>
-                                    <a href="#yijianpa-垃圾AS">垃圾AS</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#starboy">star哥</a>
-                            <ul>
-                                <li>
-                                    <a href="#starboy-比一比谁的star多">比一比谁的star多</a>
-                                </li>
-                                <li>
-                                    <a href="#starboy-不用md用nm">不用md用nm</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <ul></ul>
                 </li>
                 <li id="trashes">
                     <a href="#trashes">奇人巨作</a>
-                    <ul>
-                        <li>
-                            <a href="#timestar">时光星球</a>
-                            <ul>
-                                <li>
-                                    <a href="#timestar-智能出题语音机器人">智能出题语音机器人</a>
-                                </li>
-                                <li>
-                                    <a href="#timestar-时光大制作">时光大制作</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <ul></ul>
                 </li>
             </ul>
         </nav>
-
-        <div class="chapter">
-            <div class="mdui-typo">
-                <h2 id="timestar" class="chapter-title chapter-title-first">时光星球</h2>
-            </div>
-            <p class="contact">(QQ: <a
-                    href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=406631360">406631360</a>
-                )</p>
-            <img id="timestar-时光帝国" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960wyd.png"
-                alt="时光帝国" />
-            <img id="timestar-三条边的四边形" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960dQH.png"
-                alt="三条边的四边形" />
-            <img id="timestar-追梦人" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960sTP.png"
-                alt="追梦人" />
-            <img id="timestar-人像识别" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960NWD.png"
-                alt="人像识别" />
-            <img id="timestar-时光奇论" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960aSe.png"
-                alt="时光奇论" />
-            <img id="timestar-时光奇论2" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p9600OA.png"
-                alt="时光奇论2" />
-            <img id="timestar-时说新语" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960DeI.png"
-                alt="时说新语" />
-            <video id="timestar-智能出题语音机器人" class="video mdui-center" controls="controls" data-desc="智能出题语音机器人">
-                <source src="https://lyzz.top/file/24658" type="video/mp4" />
-            </video>
-            <video id="timestar-时光大制作" class="video mdui-center" controls="controls" data-desc="时光大制作">
-                <source src="https://lyzz.top/file/24657" type="video/mp4" />
-            </video>
-        </div>
-
-        <div class="chapter">
-            <div class="mdui-typo">
-                <h2 id="triones" class="chapter-title chapter-title-first">北斗星</h2>
-            </div>
-            <p class="contact">(QQ: <a
-                    href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=1965654167">1965654167</a>
-                )</p>
-            <img id="triones-胡说八道" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960gfS.jpg"
-                alt="胡说八道" />
-            <img id="triones-指点江山" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p96B43D.png"
-                alt="指点江山" />
-            <img id="triones-勾罕见" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960fyj.png"
-                alt="勾罕见" />
-            <img id="triones-lua取代java" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960RSg.png"
-                alt="lua取代java" />
-            <img id="triones-java退出舞台" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960cY8.png"
-                alt="java退出舞台" />
-            <img id="triones-胡言乱语" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960hOs.png"
-                alt="胡言乱语" />
-            <img id="triones-安卓apk转苹果apk" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p960WlQ.png"
-                alt="安卓apk转苹果apk" />
-            <img id="triones-这就是未来，听北斗星说" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p9605mn.png"
-                alt="这就是未来，听北斗星说" />
-            <img id="triones-狗屁不通的数学证明" class="image mdui-center" src="https://s1.ax1x.com/2023/05/16/p92Bjl8.png"
-                alt="狗屁不通的数学证明" />
-            <img id="triones-学校学的是淘汰品" class="image mdui-center" src="https://s1.ax1x.com/2023/05/18/p9fdGNR.png"
-                alt="学校学的是淘汰品" />
-            <img id="triones-振动治好不育" class="image mdui-center" src="https://s1.ax1x.com/2023/07/20/pCH9rPP.png"
-                alt="振动治好不育" />
-        </div>
-
-        <div class="chapter">
-            <div class="mdui-typo">
-                <h2 id="quzefei" class="chapter-title chapter-title-first">曲泽飞</h2>
-            </div>
-            <p class="contact">(QQ: <a
-                    href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=3235314917">3235314917</a>
-                )</p>
-            <img id="quzefei-心系苍生" class="image mdui-center" src="https://s1.ax1x.com/2023/05/13/p9606Ff.png"
-                alt="心系苍生" />
-        </div>
-
-        <div class="chapter">
-            <div class="mdui-typo">
-                <h2 id="yijianpa" class="chapter-title chapter-title-first">一键爬</h2>
-            </div>
-            <p class="contact">(QQ: <a
-                    href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=1053062792">1053062792</a>
-                )</p>
-            <img id="yijianpa-垃圾AS" class="image mdui-center" src="https://s1.ax1x.com/2023/06/25/pCNRIE9.png"
-                alt="垃圾AS" />
-        </div>
-
-        <div class="chapter">
-            <div class="mdui-typo">
-                <h2 id="starboy" class="chapter-title chapter-title-first">star哥</h2>
-            </div>
-            <p class="contact">(QQ: <a
-                    href="mqqapi://card/show_pslcard?src_type=internal&source=sharecard&version=1&uin=2821981550">2821981550</a>
-                )</p>
-            <img id="starboy-比一比谁的star多" class="image mdui-center" src="https://s1.ax1x.com/2023/07/07/pCchvsU.png"
-                alt="比一比谁的star多" />
-            <img id="starboy-不用md用nm" class="image mdui-center" src="https://s1.ax1x.com/2023/07/07/pCchxLF.png"
-                alt="不用md用nm" />
-        </div>
-
     </div>
 
     <button id="fab" class="mdui-fab mdui-fab-fixed mdui-fab-mini" style="display: none;"><i
