--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>奇人共赏</title>
-    <link rel="stylesheet" href="https://cdn.w3cbus.com/library/mdui/1.0.2/css/mdui.min.css" />
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/mdui/1.0.2/css/mdui.min.css" />
     <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -29,7 +29,7 @@
     <button id="fab" class="mdui-fab mdui-fab-fixed mdui-fab-mini" style="display: none;"><i
             class="mdui-icon material-icons">arrow_upward</i></button>
 
-    <script src="https://cdn.w3cbus.com/library/mdui/1.0.2/js/mdui.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/mdui/1.0.2/js/mdui.min.js"></script>
     <script src="index.js"></script>
 
 </body>
