--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -5,13 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>奇人共赏</title>
-    <link rel="stylesheet" href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/css/mdui.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/mdui@2.0.6/mdui.css" />
     <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
-
-    <div class="mdui-container mdui-text-color-black">
+    <div class="mdui-container">
         <nav>
             <ul>
                 <li id="idiots">
@@ -26,10 +25,15 @@
         </nav>
     </div>
 
-    <button id="fab" class="mdui-fab mdui-fab-fixed mdui-fab-mini" style="display: none;"><i
-            class="mdui-icon material-icons">arrow_upward</i></button>
+    <mdui-button-icon id="fab" variant="outlined" style="display: none; position: fixed; right: 24px; bottom: 24px;">
+        <mdui-icon>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                <path d="M440-647 244-451q-12 12-28 11.5T188-452q-11-12-11.5-28t11.5-28l264-264q6-6 13-8.5t15-2.5q8 0 15 2.5t13 8.5l264 264q11 11 11 27.5T772-452q-12 12-28.5 12T715-452L520-647v447q0 17-11.5 28.5T480-160q-17 0-28.5-11.5T440-200v-447Z" />
+            </svg>
+        </mdui-icon>
+    </mdui-button-icon>
 
-    <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/js/mdui.min.js"></script>
+    <script src="https://unpkg.com/mdui@2.0.6/mdui.global.js"></script>
     <script src="index.js"></script>
 
 </body>
