--- a/aluaidiots/index.html
+++ b/aluaidiots/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>奇人共赏</title>
-    <link rel="stylesheet" href="https://unpkg.com/mdui@2.0.6/mdui.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@2/mdui.min.css" />
     <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -33,7 +33,7 @@
         </mdui-icon>
     </mdui-button-icon>
 
-    <script src="https://unpkg.com/mdui@2.0.6/mdui.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mdui@2/mdui.global.min.js"></script>
     <script src="index.js"></script>
 
 </body>
